--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Exercício HTML 5">
+    <title>HTML 5</title>
     <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
@@ -16,7 +17,7 @@
 
     <p><strong>Este parágrafo é importante, está em, negrito e tem o seguinte trecho de código: console.log('foobar')</strong></p>
 
-    <p>Este parágrafo contém um link para <a href="">https://www.google.com.br/</a></p>
+    <p>Este parágrafo contém um link para <a href="https://www.google.com.br/">https://www.google.com.br/</a></p>
 
     <ul>
         <li>Isto é o item de uma <em>lista não ordenada</em> e a primeira expressão "lista não ordenada" dele possui ênfase"</li>
